--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "classnames": "^2.3.2",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "eslint": "8.44.0",
